# HuffmanArchiver

./: CMakeLists.txt  archiver.cpp  init.h  my_tests.h
CLA/: cla_parser.cpp  cla_parser.h
Exceptions/: exceptions.h
Huffman/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman.cpp  huffman.h
IO/: reader.cpp  reader.h  writer.cpp  writer.h
Symbol/: symbol.cpp  symbol.h
